--- a/src/includes/base.pug
+++ b/src/includes/base.pug
@@ -23,11 +23,11 @@ html(lang='ru')
 		include footer
 		include icons.html
 		block scripts
-			script(src='js/jquery-3.5.1.min.js')
-			script(src='js/jquery.fancybox.min.js')
-			script(src='js/owl.carousel.min.js')
+			script(src='libs/jquery-3.5.1.min.js')
+			script(src='libs/jquery.fancybox.min.js')
+			script(src='libs/owl.carousel.min.js')
 			if pageName === "contacts-page"
 				script(async src="https://api-maps.yandex.ru/2.1/?load=package.standard&lang=ru_RU&scroll=false&onload=getYaMap")
-			else 
+			else
 
 			script(src='js/main.js')
