--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -10,9 +10,15 @@ html(lang='ru')
 		meta(name='keywords' content=pageKeywords)
 		meta(property='og:title' content=pageTitle)
 		meta(property='og:description' content=pageDescription)
-		meta(property='og:image' content='img/cover_project.jpg')
+		meta(property='og:image' content='/merlioncloud/img/cover_project.jpg')
 		meta(name='robots' content='noindex, nofollow')
-		link(rel='shortcut icon' type='image/png' href='/merlioncloud/img/favicon.ico')
+		link(rel="apple-touch-icon" sizes="180x180" href="/merlioncloud/img/favicon/apple-touch-icon.png")
+		link(rel="icon" type="image/png" sizes="32x32" href="/merlioncloud/img/favicon/favicon-32x32.png")
+		link(rel="icon" type="image/png" sizes="16x16" href="/merlioncloud/img/favicon/favicon-16x16.png")
+		link(rel="manifest" href="/merlioncloud/img/favicon/site.webmanifest")
+		link(rel="mask-icon" href="/merlioncloud/img/favicon/safari-pinned-tab.svg" color="#e84234")
+		meta(name="msapplication-TileColor" content="#2d89ef")
+		meta(name="theme-color" content="#ffffff")
 		link(rel='stylesheet' type='text/css' href='/merlioncloud/css/style.css')
 	body(class=pageName)
 		.overlay
