--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -12,13 +12,14 @@ html(lang='ru')
 		meta(property='og:description' content=pageDescription)
 		meta(property='og:image' content='/merlioncloud/img/cover_project.jpg')
 		meta(name='robots' content='noindex, nofollow')
-		link(rel="apple-touch-icon" sizes="180x180" href="/merlioncloud/img/favicon/apple-touch-icon.png")
-		link(rel="icon" type="image/png" sizes="32x32" href="/merlioncloud/img/favicon/favicon-32x32.png")
-		link(rel="icon" type="image/png" sizes="16x16" href="/merlioncloud/img/favicon/favicon-16x16.png")
-		link(rel="manifest" href="/merlioncloud/img/favicon/site.webmanifest")
-		link(rel="mask-icon" href="/merlioncloud/img/favicon/safari-pinned-tab.svg" color="#e84234")
-		meta(name="msapplication-TileColor" content="#2d89ef")
-		meta(name="theme-color" content="#ffffff")
+		link(rel='shortcut icon' type='image/png' href='/merlioncloud/img/favicon/favicon.ico')
+		link(rel='apple-touch-icon' sizes='180x180' href='/merlioncloud/img/favicon/apple-touch-icon.png')
+		link(rel='icon' type='image/png' sizes='32x32' href='/merlioncloud/img/favicon/favicon-32x32.png')
+		link(rel='icon' type='image/png' sizes='16x16' href='/merlioncloud/img/favicon/favicon-16x16.png')
+		link(rel='manifest' href='/merlioncloud/img/favicon/site.webmanifest')
+		link(rel='mask-icon' href='/merlioncloud/img/favicon/safari-pinned-tab.svg' color='#e84234')
+		meta(name='msapplication-TileColor' content='#2d89ef')
+		meta(name='theme-color' content='#ffffff')
 		link(rel='stylesheet' type='text/css' href='/merlioncloud/css/style.css')
 	body(class=pageName)
 		.overlay
@@ -32,8 +33,8 @@ html(lang='ru')
 			script(src='/merlioncloud/libs/just-validate.min.js')
 			script(src='/merlioncloud/libs/inputmask.min.js')
 			script(src='/merlioncloud/libs/owl.carousel.min.js')
-			if pageName === "contacts-page"
-				script(async src="https://api-maps.yandex.ru/2.1/?load=package.standard&lang=ru_RU&scroll=false&onload=getYaMap")
+			if pageName === 'contacts-page'
+				script(async src='https://api-maps.yandex.ru/2.1/?load=package.standard&lang=ru_RU&scroll=false&onload=getYaMap')
 			else
 
 			script(src='/merlioncloud/js/main.js')
